# VisitorIntelsite

./: .replit  COMPLETE_CODE_PACKAGE.md  COMPLETE_SYSTEM_ARCHITECTURE.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_GUIDE.md  Instructions.md  REPLICATION_PROMPT.md  ai_conversation.py  app.py  auto_posting_scheduler.py  backup_system.py  content_ecosystem.py  create_sample_infographic.py  create_visitor_intel_logo.py  demo_content.py  enhanced_conversation_system.py  enhanced_conversation_system.py.backup  external_ai_demo.py  external_ai_integration.py  infographic_generator.py  keepalive.py  main.py  models.py  mood_color_generator.py  payment_handler.py  pyproject.toml  realtime_conversation.py  replit.md  requirements-clean.txt  requirements-deployment.txt  requirements-minimal.txt  requirements.txt  routes.py  social_media_manager.py  subscription_manager.py  test_social_content.py  visitor_intel_backend_fix.py
attached_assets/: AI Prompt for Premium Business Infographics & Daily Social Media Content_1751624350489.md  Enhanced 4-API Conversation System Integration Guide_1751635464504.md  Pasted--Making-Conversations-Public-and-Crawlable-First-the-AI-conversations-must-be-accessible-to-searc-1751504661852_1751504661853.txt  Pasted--STEP-1-BACKUP-YOUR-CURRENT-FILES-Before-making-any-changes-backup-these-critical-files-Bash--1751672204163_1751672204169.txt  Pasted--Your-Complete-Solution-Package-I-have-created-two-new-files-that-you-need-to-integrate-into-your-1752164444020_1752164444020.txt  Perfect Roofing Team - Visitor Intel Focused Social Media Content_1751624314799.md  (+16 more)
(+50 files in other folders)
