[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.56.0",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.24.0",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.4",
    "sift-stack-py>=0.7.0",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "pillow>=11.3.0",
    "pytz>=2025.2",
    "flask-cors>=6.0.0",
    "python-socketio>=5.12.0",
    "flask-socketio>=5.5.1",
    "eventlet>=0.33.3",
    "schedule>=1.2.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "blinker>=1.9.0",
    "click>=8.2.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "typing-extensions>=4.14.0",
]
